Modification de l'index pour test CI/CD auto

--- a/demo-java-app/src/main/resources/templates/index.html
+++ b/demo-java-app/src/main/resources/templates/index.html
@@ -51,6 +51,7 @@
 <body>
 
 <div class="container fade-in">
+    <h2>Version modifiée le 31 mai 2025</h2>
     <h1 class="slide-down" th:text="${title}">Default title.</h1>
     <p th:text="${msg}" class="mt-4">Default text.</p>
 </div>
